# fluffe-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
.github/workflows/: publish.yml  rust.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs
entity/src/entity/: chats.rs  mod.rs  players.rs  prelude.rs  users.rs
locales/: en.yml  ru.toml  ru.yml
migration/src/: lib.rs  m20220101_000001_create_users.rs  m20240318_172753_create_chats.rs
src/: command.rs  consts.rs  handlers.rs  lib.rs  main.rs  shipu.rs  utils.rs
src/commands/: femboy.rs  mod.rs  shipu.rs
src/domain/: femboy.rs  mod.rs  server.rs  user.rs
src/image/: mod.rs  pet_gif_creator.rs
src/images/: pet_gif_creator.rs  reactor.rs
src/service/: femboy.rs  mod.rs  server.rs  user.rs
