[package]
name = "fluffe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rust-i18n = "3.0.1"
thiserror = "1.0"
rand = "0.8.5"
dotenvy = "0.15.7"
diesel = "2.1.4"
